--- a/index.html
+++ b/index.html
@@ -1962,7 +1962,7 @@
             <div class="impressum-section">
                 <h3 id="impressum-modal-title" class="impressum-title">Impressum & Datenschutz</h3>
                 <div class="impressum-content">
-                    <p><strong>Angaben gemäß § 5 TMG:</strong></p>
+                    <p><strong>Angaben gemäß § 5 DDG:</strong></p>
                     <p><strong>KI-ProjexX</strong></p>
                     <p>Mathias Schulz</p>
                     <p>Haidbarg 30B</p>
